--- a/app/assets/styles/variables/_colors.scss
+++ b/app/assets/styles/variables/_colors.scss
@@ -1,71 +1,45 @@
 :root {
-  --primary: #bf9d7c;
-  --secondary: #686062;
-  --success: #7dbf8a;
-  --info: #a02525;
-
-  --ui-bgAccent: #a02525;
-  --ui-bgDark: var(--a-black);
-  //  --ui-bg: var(--a-white);
-
-  --ui-color-primary-50: #f9f6f3;
-  --ui-color-primary-100: #f2ece2;
-  --ui-color-primary-200: #e3d6c5;
-  --ui-color-primary-300: #d1bba0;
-  --ui-color-primary-400: #bf9d7c;
-  --ui-color-primary-500: #b0835f;
-  --ui-color-primary-600: #a37153;
-  --ui-color-primary-700: #885c46;
-  --ui-color-primary-800: #6e4c3e;
-  --ui-color-primary-900: #5a4034;
-  --ui-color-primary-950: #30201a;
-
-  --ui-color-secondary-50: #f3f3f3;
-  --ui-color-secondary-100: #e2dfdf;
-  --ui-color-secondary-200: #c6c2c2;
-  --ui-color-secondary-300: #a69e9e;
-  --ui-color-secondary-400: #8c8384;
-  --ui-color-secondary-500: #7e7476;
-  --ui-color-secondary-600: #686062;
-  --ui-color-secondary-700: #575153;
-  --ui-color-secondary-800: #4c4749;
-  --ui-color-secondary-900: #434042;
-  --ui-color-secondary-950: #252324;
-
-  --ui-color-success-50: #f0f9f1;
-  --ui-color-success-100: #dcefdd;
-  --ui-color-success-200: #bbdfbf;
-  --ui-color-success-300: #7dbf8a;
-  --ui-color-success-400: #5ea970;
-  --ui-color-success-500: #3c8d51;
-  --ui-color-success-600: #2b703f;
-  --ui-color-success-700: #225a33;
-  --ui-color-success-800: #1d482b;
-  --ui-color-success-900: #193b24;
-  --ui-color-success-950: #0d2114;
-
-  --ui-placeholder: #0d2114;
-
-  --ui-icon: #a9a9a9;
-
   // Base
   --a-white: #fff;
   --a-black: #000;
-  --a-base: #bf9d7c;
+
+  --a-mainAccent: #41b883;
 
   // Typography
-  --ui-text: var(--a-white);
-  --a-text-light: #a9a9a9;
+  --a-mainText: #1c1c1b;
+  --a-mainTextLight: #626877;
+  --a-headerText: #878c99;
+  --a-accentText: #d5c29a;
+  --a-accentTextDark: #d6c399;
+  --a-accentTextExDark: #a28556;
+  --a-lightText: #dcf3ea;
+  --a-errorText: #ff0000;
+
+  --code-accent: #e8a55b;
+  --code-ident: #a8c334;
+  --code-var: #6c9eea;
+  --code-cnt: #d697fb;
 
   // Background
-  --a-whiteBg: #fff;
-  --a-blackBg: #000;
   --a-mainBg: #e5e5e5;
-  --a-accentBg: #c2a283;
-  --a-accentDarkBg: #996d42;
-  --a-btnAccentBg: #a02525;
+  --a-bgAccent: #d5c29a;
+  --a-bgAccentLight: #d6c399;
+  --a-bgAccentExLight: #ddceae;
+  --a-bgAccentDark: #b19364;
+  --a-bgLight: #f7f4ee;
+  --a-bgDark: #292d3e;
+  --a-bgSepia: #ddceae;
+  --a-bgGray: #c1c7cb;
+  --a-bgGreen: #00a54c;
+  --a-bgTable: #f7f3eb;
+  --a-bgTableLight: #e8e1cf;
+  --a-bgWarning: #e37508;
+  --a-bgWarningHover: #c0660d;
 
   // Border
-  --a-border: #e5e5e5;
-  --a-border-white: #e5e5e5;
+  --a-borderLght: #e5e5e5;
+  --a-borderMain: #b4bacc;
+  --a-borderAccent: #b19364;
+  --a-borderAccentLight: #ddceae;
+  --a-borderWarning: #e37508;
 }
