feat: add main page (WIP восстановление)

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -9,16 +9,12 @@
 @tailwind components;
 @tailwind utilities;*/
 
-:root {
-  --system-font:
-    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-    "Noto Color Emoji", sans-serif;
-}
-
-body {
-  font-family: var(--system-font);
-}
+//:root {
+//  --system-font:
+//    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
+//    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+//    "Noto Color Emoji", sans-serif;
+//}
 
 :where(.dark, .dark *) {
   color-scheme: light !important;
