feat: add functions step one

--- a/app/assets/styles/base/_fonts.scss
+++ b/app/assets/styles/base/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   src:
     url("/fonts/Montserrat-Italic.woff2") format("woff2"),
     url("/fonts/Montserrat-Italic.woff") format("woff");
@@ -9,7 +9,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   src:
     url("/fonts/Montserrat-MediumItalic.woff2") format("woff2"),
     url("/fonts/Montserrat-MediumItalic.woff") format("woff");
@@ -19,7 +19,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   src:
     url("/fonts/Montserrat-Regular.woff2") format("woff2"),
     url("/fonts/Montserrat-Regular.woff") format("woff");
@@ -29,7 +29,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   src:
     url("/fonts/Montserrat-SemiBold.woff2") format("woff2"),
     url("/fonts/Montserrat-SemiBold.woff") format("woff");
@@ -39,7 +39,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   src:
     url("/fonts/Montserrat-Bold.woff2") format("woff2"),
     url("/fonts/Montserrat-Bold.woff") format("woff");
@@ -49,7 +49,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   src:
     url("/fonts/Montserrat-Medium.woff2") format("woff2"),
     url("/fonts/Montserrat-Medium.woff") format("woff");
@@ -59,7 +59,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: Montserrat;
   src:
     url("/fonts/Montserrat-Light.woff2") format("woff2"),
     url("/fonts/Montserrat-Light.woff") format("woff");
