--- a/app/assets/styles/variables/_colors.scss
+++ b/app/assets/styles/variables/_colors.scss
@@ -2,7 +2,6 @@
   // Base
   --a-white: #fff;
   --a-black: #000;
-
   --a-mainAccent: #41b883;
 
   // Typography
@@ -13,8 +12,7 @@
   --a-accentTextDark: #d6c399;
   --a-accentTextExDark: #a28556;
   --a-lightText: #dcf3ea;
-  --a-errorText: #ff0000;
-
+  --a-errorText: #f00;
   --code-accent: #e8a55b;
   --code-ident: #a8c334;
   --code-var: #6c9eea;
