--- a/app/assets/styles/base/_global.scss
+++ b/app/assets/styles/base/_global.scss
@@ -70,3 +70,30 @@ ul {
     border: 1px solid var(--a-borderAccent);
   }
 }
+
+.body-cell {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: rem(12);
+  font-weight: 700;
+  border-right: 1px solid var(--a-borderAccentLight);
+  padding: rem(8);
+  background-color: var(--a-bgTable);
+  border-bottom: 1px solid var(--a-borderAccentLight);
+
+  & input {
+    width: 100%;
+    padding: 0.25rem 0.375rem;
+    border: 1px solid var(--a-borderAccentLight);
+    background-color: var(--a-mainBg);
+    border-radius: 0.25rem;
+    box-sizing: border-box;
+  }
+}
+
+.header-cell,
+.cell {
+  display: flex;
+  padding: rem(8);
+}
