--- a/app/assets/styles/variables/_colors.scss
+++ b/app/assets/styles/variables/_colors.scss
@@ -40,4 +40,16 @@
   --a-borderAccent: #b19364;
   --a-borderAccentLight: #ddceae;
   --a-borderWarning: #e37508;
+
+  --color-primary-50: #faf7f2;
+  --color-primary-100: #f3eee1;
+  --color-primary-200: #e6dbc2;
+  --color-primary-300: #d5c29a;
+  --color-primary-400: #c4a573;
+  --color-primary-500: #b88f57;
+  --color-primary-600: #aa7c4c;
+  --color-primary-700: #8e6440;
+  --color-primary-800: #735239;
+  --color-primary-900: #5e4430;
+  --color-primary-950: #322218;
 }
