feat: table 2.1 add validate

--- a/app/assets/styles/variables/_colors.scss
+++ b/app/assets/styles/variables/_colors.scss
@@ -40,6 +40,7 @@
   --a-borderAccent: #b19364;
   --a-borderAccentLight: #ddceae;
   --a-borderWarning: #e37508;
+  --a-borderError: #ee0101;
 
   --color-primary-50: #faf7f2;
   --color-primary-100: #f3eee1;
