feat: add validation step two

--- a/app/assets/styles/variables/_colors.scss
+++ b/app/assets/styles/variables/_colors.scss
@@ -28,6 +28,7 @@
   --a-bgDark: #292d3e;
   --a-bgSepia: #ddceae;
   --a-bgGray: #c1c7cb;
+  --a-bgGrayLight: #d6dce0;
   --a-bgGreen: #00a54c;
   --a-bgTable: #f7f3eb;
   --a-bgTableLight: #e8e1cf;
