feat: save changes cashiers and styles

--- a/app/assets/styles/variables/_colors.scss
+++ b/app/assets/styles/variables/_colors.scss
@@ -7,6 +7,7 @@
   // Typography
   --a-mainText: #1c1c1b;
   --a-mainTextLight: #626877;
+  --a-mainTexPlaceholder: #484a50;
   --a-headerText: #878c99;
   --a-accentText: #d5c29a;
   --a-accentTextDark: #d6c399;
