--- a/app/assets/styles/variables/_colors.scss
+++ b/app/assets/styles/variables/_colors.scss
@@ -23,7 +23,7 @@
   --a-mainBg: #e5e5e5;
   --a-bgAccent: #d5c29a;
   --a-bgAccentLight: #d6c399;
-  --a-bgAccentExLight: #ddceae;
+  --a-bgAccentExLight: #daceb5;
   --a-bgAccentDark: #b19364;
   --a-bgLight: #f7f4ee;
   --a-bgDark: #292d3e;
