fix datepicker view in cashers page

--- a/app/assets/styles/base/_global.scss
+++ b/app/assets/styles/base/_global.scss
@@ -52,6 +52,7 @@ ul {
   flex-shrink: 0;
   font-size: rem(14);
   font-weight: 600;
+  color: var(--a-mainText);
   border-radius: 0.25rem;
   transition: background-color 0.3s;
   cursor: pointer;
