--- a/app/assets/styles/variables/_colors.scss
+++ b/app/assets/styles/variables/_colors.scss
@@ -55,4 +55,8 @@
   --color-primary-800: #735239;
   --color-primary-900: #5e4430;
   --color-primary-950: #322218;
+
+  --normal-bg: #d5c29a;
+  --normal-text: #292d3e;
+  --normal-description: #e37508;
 }
