fix style cashiers page

--- a/app/assets/styles/variables/_colors.scss
+++ b/app/assets/styles/variables/_colors.scss
@@ -12,7 +12,7 @@
   --a-accentText: #d5c29a;
   --a-accentTextDark: #d6c399;
   --a-accentTextExDark: #a28556;
-  --a-lightText: #dcf3ea;
+  --a-lightText: #f1ebe5;
   --a-errorText: #f00;
   --code-accent: #e8a55b;
   --code-ident: #a8c334;
@@ -20,7 +20,7 @@
   --code-cnt: #d697fb;
 
   // Background
-  --a-mainBg: #e5e5e5;
+  --a-mainBg: #efefef;
   --a-bgAccent: #d5c29a;
   --a-bgAccentLight: #d6c399;
   --a-bgAccentExLight: #daceb5;
