--- a/app/assets/styles/variables/_colors.scss
+++ b/app/assets/styles/variables/_colors.scss
@@ -29,6 +29,7 @@
   --a-bgDark: #292d3e;
   --a-bgSepia: #ddceae;
   --a-bgGray: #c1c7cb;
+  --a-bgGrayDark: #93979a;
   --a-bgGrayLight: #d6dce0;
   --a-bgGreen: #00a54c;
   --a-bgTable: #f7f3eb;
@@ -41,6 +42,7 @@
   --a-borderMain: #b4bacc;
   --a-borderAccent: #b19364;
   --a-borderAccentLight: #ddceae;
+  --a-borderAccentDark: #5e4430;
   --a-borderWarning: #e37508;
   --a-borderError: #ee0101;
 
